syntax = "proto3";

package v2ray.core.common.net;
option csharp_namespace = "V2Ray.Core.Common.Net";
option go_package = "net";
option java_package = "com.v2ray.core.common.net";
option java_outer_classname = "NetworkProto";

enum Network {
  Unknown = 0;

  // Native TCP provided by system.
  RawTCP = 1;

  // V2Ray specific TCP.
  TCP = 2;

  UDP = 3;

  KCP = 4;
  
  WebSocket = 5;
}

message NetworkList {
  repeated Network network = 1;
}