syntax = "proto3";

package v2ray.core.proxy.freedom;
option csharp_namespace = "V2Ray.Core.Proxy.Freedom";
option go_package = "freedom";
option java_package = "com.v2ray.core.proxy.freedom";
option java_outer_classname = "ConfigProto";

message Config {
  enum DomainStrategy {
    AS_IS = 0;
    USE_IP = 1;
  }
  DomainStrategy domainStrategy = 1;
  uint32 timeout = 2;
}